--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
   <div class="container">
     <div class="photo-container fade-up">
-      <img src="Captura de tela 2025-05-29 194912.png" alt="Foto de Perfil" />
+      <img src="capa portfólio.PNG" alt="Foto de Perfil" />
     </div>
 
     <header class="fade-up">
